# network-structures-analysis

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
lab_1/: Lab_1.docx  lab_1.ipynb
lab_2/: Lab_2.docx
lab_3/: Lab_3.docx  lab_3.ipynb
lab_4/: Lab_4.docx  lab_4.ipynb
lab_5/: Lab_5.docx  lab_5.ipynb
lab_6/: Lab_6.docx  lab_6.ipynb
